<resources>
    <string name="app_name">MyViewsColored</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">Red</string>
    <string name="button_yellow">Yellow</string>
    <string name="button_green">Green</string>
    <string name="how_to_play">How to Play</string>
    <string name="click_boxes">Tap Boxes and screen</string>
    <string name="refresh">Refresh</string>
</resources>
